# snublejuice

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md  SETUP.md  app.js  fetch.js  package.json  pyproject.toml  server.js  ui.json
.github/workflows/: main_snublejuice.yml
backups/: backup.mjs  logo.py  operations.py  pyproject.toml  vivino.py
crates/api/: Cargo.toml
crates/api/src/: lib.rs  metadata.rs  products.rs  users.rs
crates/authentication/: Cargo.toml
crates/authentication/src/: auth.rs  lib.rs  middle.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  models.rs  query.rs  state.rs  subdomain.rs
crates/database/: Cargo.toml
crates/database-sqlite/tests/: integration_tests.rs
crates/database/src/: connect.rs  fetch.rs  lib.rs  metadata.rs  products.rs  query.rs  users.rs
crates/frontend/: Cargo.toml
crates/frontend/public/: manifest.json  stylesheet.css
crates/frontend/public/scripts/: buttons.js  countries.js  profile.js  stores.js  svg.js  theme.js
crates/frontend/src/: lib.rs  render.rs
crates/frontend/templates/: base.html  error.html  landing.html  products.html
crates/frontend/templates/partials/: account.html  detailed.html  footer.html  forms.html  head.html  macros.html  pagination.html  product.html  subdomains.html
crates/routes/: Cargo.toml
crates/routes-sqlite/src/: error.rs
crates/routes/src/: account.rs  handlers.rs  lib.rs  metadata.rs  products.rs  router.rs  subdomain.rs  users.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  models.rs  query.rs  subdomain.rs
database/: connect.js  operations.js  operations.py
fetch/: backup.sh  detailed.mjs  email.mjs  monthly.sh  popular.mjs  price.mjs  ratings.sh  restore.sh  stock.sh  taxfree.mjs  test.sh  update.sh
fetch/lib/: errorHandler.mjs
fetch/scripts/: monthly.sh  ratings.sh  stock.sh
fetch/taxfree/: price.mjs  stock.mjs
fetch/vinmonopolet/: detailed.mjs  popular.mjs  price.mjs
fetch/vivino/: rating.mjs
jules-scratch/verification/: verify_background.py
public/: styles.css  stylesheet.css
public/scripts/: buttons.js  countries.js  graph.js  profile.js  stores.js  storesTaxfree.js
routes/: account.js  data.js
scrape/: available.py  new.py  price.py
sqlite/database-sqlite/: Cargo.toml
sqlite/database-sqlite/src/: fetch.rs
sqlite/routes-sqlite/src/: auth.rs
src/: main.rs
src/database/: connect.js  operations.js
src/other/: snake.html
src/public/: manifest.json  stylesheet.css
src/public/scripts/: buttons.js  countries.js  graph.js  profile.js  stores.js  svg.js  theme.js
src/routes/: account.js  data.js
src/views/: error.ejs  landing.ejs  landing.ejs.bak  maintenance.ejs  products.ejs
src/views/partials/: account.ejs  detailed.ejs  footer.ejs  forms.ejs  pagination.ejs  product.ejs  subdomains.ejs
static/: styles.css
views/: error.ejs  landing.ejs  products.ejs
views/partials/: account.ejs  detailed-common.ejs  detailed-taxfree.ejs  detailed-vinmonopolet.ejs  detailed.ejs  detailedTaxfree.ejs  footer.ejs  forms.ejs  header.ejs  pagination.ejs  product.ejs
