[workspace]
members = [
    "crates/authentication",
    "crates/shared",
    "crates/database",
    "crates/frontend",
    "crates/api",
    "crates/server"
]
resolver = "3"

[workspace.dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bson = { version = "3.1.0", features = ["chrono-0_4"] }
chrono = "0.4.44"
mongodb = "3.5.1"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pin until cookie/bson fix blanket From impl conflicts with time 0.3.48+
time = "=0.3.47"
tokio = "1.50.0"
tower-http = "0.6.8"
