[project]
name = "snublejuice"
version = "0.1.0"
description = "For debugging og testing av snublejuice."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pymongo>=4.12.1",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "ty>=0.0.1a7",
]
