[package]
name = "api"
description = "Routing requests."
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
authentication = { path = "../authentication" }
core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower = "0.5.3"
tower-http = { workspace = true }
mongodb = "3.5.1"
regex = "1.12.3"
lazy_static = "1.5.0"
