[package]
name = "api"
description = "Routing requests."
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
authentication = { path = "../authentication" }
shared = { path = "../shared" }

serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = "0.5.3"
tower-http = { workspace = true, features = ["fs"] }
mongodb = { workspace = true }
regex = { workspace = true }
