[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
database = { path = "../database" }

axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bcrypt = "0.19.0"
uuid = "1.22.0"
chrono = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
tokio = { workspace = true }
tower_governor = { version = "0.8", features = ["axum"] }
time = { workspace = true }
