[package]
name = "database"
description = "Interactions with the database."
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

bson = { version = "3.1.0", features = ["chrono-0_4"] }
chrono = "0.4.44"
futures = "0.3.32"
mongodb = "3.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.0", features = [ "rt-multi-thread", "macros" ]}
