[package]
name = "database"
description = "Interactions with the database."
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

bson = { workspace = true }
chrono = { workspace = true }
futures = "0.3.32"
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
