[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
database = { path = "../database" }
authentication = { path = "../authentication" }

axum = { workspace = true }
axum-embed = "0.1.0"
minijinja = { version = "2.18.0" }
rust-embed = "8"
chrono = { workspace = true }
regex = { workspace = true }
