[package]
name = "routes"
description = "Routing requests."
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
mongodb = "3.5.0"
thiserror = "2.0.17"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tower-cookies = "0.11.0"
once_cell = "1.21.3"
serde_json = "1.0.148"
chrono = "0.4.42"
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

database = { path = "../database" }
