[package]
name = "routes"
description = "Routing requests."
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

database = { path = "../database" }
core = { version = "0.1.0", path = "../core" }
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
mongodb = "3.5.1"
