[package]
name = "server"
description = "Main entrypoint combining the crates."
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

database = { path = "../database"}
routes = { path = "../routes"}
core = { version = "0.1.0", path = "../core" }
