[package]
name = "server"
description = "Main entrypoint combining the crates."
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database"}
api = { path = "../api"}
authentication = { path = "../authentication"}
frontend = { path = "../frontend"}
shared = { path = "../shared" }

axum = { version = "0.8.7", features = ["macros"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
