[package]
name = "server"
description = "Main entrypoint combining the crates."
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database"}
api = { path = "../api"}
authentication = { path = "../authentication"}
frontend = { path = "../frontend"}
shared = { path = "../shared" }

axum = { workspace = true, features = ["macros"] }
dotenv = "0.15.0"
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
