[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bson = { version = "3.1.0", features = ["chrono-0_4"] }
chrono = "0.4.44"
mongodb = "3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.18.0"
thiserror = "2.0.18"
regex = "1.12.3"
