[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.18.0"
thiserror = "2.0.18"
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
